1998-07-09  Alex Lancaster  <alex@santafe.edu>

	* INSTALL: Add generic configure instructions. 

1998-06-25  Alex Lancaster  <alex@santafe.edu>

	* configure.in: Update version to 1.2.

1998-06-25  Alex Lancaster  <alex@santafe.edu>

	* Makefile.conf:  Remove.

	* configure.in (--with-swarm): Changed $(SWARMHOME) to
	$(SWARMSRCDIR) as the default environment variable for Swarm
	source.

	* protocol.el (sgml-examples): Wrap the text of the PROGRAMLISTING
	with the "<![ CDATA [ ]]>" directive to prevent erroneous
	interpretation by jade of text of example.

	* history.el (process-changelog): Change all references of
	(swarmhome-changelog-list) to (swarmsrcdir-changelog-list).

	* common.el (get-swarmsrcdir): Changed from (get-swarmhome). Accept
	$(SWARMSRCDIR) as new environment variable.
	(get-swarmdocs): Make all references to get-swarmsrcdir, not
	get-swarmhome.
	(pathname-for-module-sym): Likewise.

1998-06-23  Alex Lancaster  <alex@santafe.edu>

	* Makefile.rules (DISTNAME): Append @VERSION@ to $(NAME) for the
	distributed {tar}.gz files.
	(psdist): Put gzipped file in in parent directory, like
	{html,rtf,dvi}dist targets.

1998-06-18  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* common.dsl (extract-module-list): Reverse list.
	(formal-object-title-mode example title): Add title;
	process-children.

1998-06-17  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* protocol.el (sgml-generate-indices): Rename src to refbook.

	* configure.in (AC_OUTPUT): Rename src to refbook, over to 
	overbook and install to installbook.

	* common.el (pathname-for-swarmdocs): Handle rename of
	src->refbook over->overbook and install->installbook.
	(pathname-for-swarmdocs-pages-output,
	pathname-for-swarmdocs-revision-output): Handle rename of
	src->refbook.

	* catalog.in: Replace src/ with refbook/, over/ with overbook/
	and install/ with installbook/ throughout.   Rename .ent files
	similarly.

	* Makefile.rules (GZIP): New variable.
	(.PHONY): Add dist targets.