@@ -1,6 +1,6 @@
 AC_INIT(protocol.el)
 
-AM_INIT_AUTOMAKE(swarmdocs, 1.2)
+AM_INIT_AUTOMAKE(swarmdocs, 1.3)
 
 AC_ARG_WITH(swarm,dnl
 changequote(<,>)dnl
