@@ -1,3 +1,13 @@
+1998-08-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* configure.in (VERSION): Bump to 1.3.
+
+	* docbook.dcl (TAGLEN, ATTSPLEN): Increase to 1805.
+
+	* protocol.el (parse-method): nil name after use.
+	(print-method-signature): Handle case of argument without keyword
+	(just `:').
+
 1998-07-09  Alex Lancaster  <alex@santafe.edu>
 
 	* INSTALL: Add generic configure instructions. 
